--- a/recycle.css
+++ b/recycle.css
@@ -1,47 +1,102 @@
-body{
-    background-color: #90A955;
+body {
+    background-color: #90A955; 
 }
 
 
-.topnav { 
+.topnav {
 
-    background-color: #ecf39e; 
+    background-color: #ecf39e;
 
-    overflow: hidden; 
+    overflow: hidden;
 
-    display: flex; 
+    display: flex;
 
-    justify-content: space-around; 
+    justify-content: space-around;
 
-    font-family: 'IBM Plex Sans', sans-serif; 
-   
+    font-family: 'IBM Plex Sans', sans-serif;
 
-  } 
-  .topnav a { 
 
-    float: left; 
+}
 
-    color: #90a955; 
+.topnav a {
 
-    text-align: center; 
+    float: left;
 
-    padding: 16px 17px; 
+    color: #90a955;
 
-    text-decoration: none; 
+    text-align: center;
 
-    font-size: 18px; 
+    padding: 16px 17px;
 
-  } 
-.topnav a:hover { 
+    text-decoration: none;
+
+    font-size: 18px;
+
+}
+
+.topnav a:hover {
     position: sticky;
 
-  background-color: #ecf39e;  
+    background-color: #ecf39e;
 
-  color: #31572c; 
+    color: #31572c;
 
-} 
+}
 
-.footer{
-    margin: ;
+.blog-container{
+    display: flex;
+    flex-flow: column wrap;
+    align-items: center;
+    justify-content: center;
+    padding: 2px;
+    background-color: #31572C;
+    width: 100%;
+    margin-top: 50px;
+    border: 1px solid transparent;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.blog{
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: center;
+    background-color: #4F772D;
+    margin: 10px;
+    border: 1px solid transparent;
+    border-radius: 10px;
+}
+
+.article{
+    clear: both;
+    display: flex;
+    align-self: flex-start;
+    border: 1px solid transparent;
+    border-radius: 10px;
+    background-color: white;
+    margin: 20px;
+}
+
+.article img{
+    float: left;
+    width: 200px;
+    border-radius: 20px;
+    padding: 10px;
+}
+
+.article h4{
     text-align: center;
 }
+
+.article p{
+    text-align: justify;
+    padding: 20px;
+}
+
+.footer {
+    margin-top: 20px ;
+    text-align: center;
+  
+}
+
+
