--- a/recycle.css
+++ b/recycle.css
@@ -1,10 +1,12 @@
 body {
-    background-color: #90A955; 
+   
+    background-image: linear-gradient(to right, #90A955 , #4F772D);
 }
-
 
 .topnav {
 
+    border-radius: 50px;
+    
     background-color: #ecf39e;
 
     overflow: hidden;
@@ -41,6 +43,44 @@ body {
 
     color: #31572c;
 
+}
+
+.quoteArea{
+    display: flex;
+    flex-flow: column wrap;
+    margin-top: 20px;
+}
+
+.quoteArea h4{
+    text-align: center;
+    color: black;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.quote{
+    animation: blinkingText 0.9s infinite;
+}
+
+@keyframes blinkingText {
+    0% {
+        color: black;
+    }
+
+    49% {
+        color: transparent;
+    }
+
+    50% {
+        color: transparent;
+    }
+
+    99% {
+        color: transparent;
+    }
+
+    100% {
+        color: black;
+    }
 }
 
 .blog-container{
@@ -81,7 +121,8 @@ body {
     float: left;
     width: 200px;
     border-radius: 20px;
-    padding: 10px;
+    margin: 10px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .article h4{
@@ -96,7 +137,15 @@ body {
 .footer {
     margin-top: 20px ;
     text-align: center;
+    padding: 1rem;
+    text-align: center;
+    font-family: 'IBM Plex Sans', sans-serif;
+  }
   
+a {
+ color:black;
+ text-decoration: none;
 }
-
-
+a:hover {
+color:rgb(36, 105, 59);
+}
