--- a/recycle.css
+++ b/recycle.css
@@ -149,3 +149,103 @@ a {
 a:hover {
     color: rgb(36, 105, 59);
 }
+
+/*About Us Page*/
+.aboutUs-container {
+    display: flex;
+    flex-flow: column wrap;
+    align-items: center;
+    justify-content: center;
+    padding: 2px;
+    background-color: #31572C;
+    width: 100%;
+    margin-top: 50px;
+    border: 1px solid transparent;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.aboutUs {
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: center;
+    background-color: #4F772D;
+    margin: 10px;
+    border: 1px solid transparent;
+    border-radius: 10px;
+}
+
+.team-member {
+    clear: both;
+    display: flex;
+    align-self: flex-start;
+    border: 1px solid transparent;
+    border-radius: 10px;
+    background-color: white;
+    margin: 20px;
+}
+
+.team-member img {
+    float: left;
+    width: 250px;
+    border-radius: 20px;
+    margin: 10px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.team-member h4 {
+    text-align: center;
+}
+
+.team-member p {
+    text-align: justify;
+    padding: 20px;
+}
+
+.social-media-container{
+    display: flex;
+    justify-content: center;
+}
+
+.social-medias{
+    display: flex;
+}
+
+.social-medias ul {
+    overflow: hidden;
+    margin: 0;
+    padding: 0;
+}
+
+.social-medias li {
+    list-style-type: none;
+    float: left;
+    padding-right: 100px;
+    padding-bottom: 20px;
+}
+
+.social-medias a {
+    display: block;
+}
+
+.social-medias i {
+    color: black;
+    font-size: 36px;
+}
+
+.description
+{ 
+    text-align: center;
+    color:rgb(255, 255, 255);
+    margin
+    /* 
+    display: flex;
+    padding: 5px;
+    background-color: rgb(55, 99, 49);
+    width: 99%;
+    margin-top: 50px;
+    border: 1px solid transparent;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); */
+   
+}
