--- a/recycle.css
+++ b/recycle.css
@@ -1,21 +1,29 @@
 body {
-    background-color: #F7FFF6;
+    /* background-color: #F7FFF6; */
+    background-color: rgb(228, 255, 235);
+}
+
+.nav-container{
+    display: flex;
+    justify-content: center;
 }
 
 .topnav {
+    position: fixed;
 
     border-radius: 50px;
 
-    background-color: rgb(63, 124, 172);
+    background-color: rgb(96, 170, 226);
 
     overflow: hidden;
 
     display: flex;
 
-    justify-content: space-around;
+    justify-content: space-between;
 
     font-family: 'IBM Plex Sans', sans-serif;
 
+    width: 60%;
 
 }
 
@@ -27,7 +35,8 @@ body {
 
     text-align: center;
 
-    padding: 16px 17px;
+    padding: 20px;
+    margin: auto;
 
     text-decoration: none;
 
@@ -35,18 +44,20 @@ body {
 
 }
 
+.topnav i{
+    font-size: 24px;
+}
+
 .topnav a:hover {
-    position: sticky;
 
-
-    color: #7b7263;
+    color: #72dae7;
 
 }
 
 .quoteArea {
     display: flex;
     flex-flow: column wrap;
-    margin-top: 20px;
+    margin-top: 80px;
 }
 
 .quoteArea h4 {
@@ -141,7 +152,7 @@ a:hover {
 
 /*About Us Page*/
 .aboutUsBody{
-    background-color: #93B48B;
+    background-color: #76a56a;
 }
 
 .aboutUs-container {
@@ -152,7 +163,7 @@ a:hover {
     padding: 2px;
     background-color: #87D68D;
     width: 100%;
-    margin-top: 50px;
+    margin-top: 90px;
     border: 1px solid transparent;
     border-radius: 10px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -221,9 +232,9 @@ a:hover {
     text-align: center;
     
    background-color: transparent;
-    margin-left: 250px;
-    margin-right: 250px;
-    font-size: large;
+    margin-left: 310px;
+    margin-right: 310px;
+    font-size: 23px;
     font-family: cursive;
    
     /* 
