--- a/recycle.css
+++ b/recycle.css
@@ -1,5 +1,6 @@
+/*Global Styles*/
+
 body {
-    /* background-color: #F7FFF6; */
     background-color: rgb(228, 255, 235);
 }
 
@@ -10,38 +11,23 @@ body {
 
 .topnav {
     position: fixed;
-
     border-radius: 50px;
-
     background-color: rgb(96, 170, 226);
-
     overflow: hidden;
-
     display: flex;
-
     justify-content: space-between;
-
     font-family: 'IBM Plex Sans', sans-serif;
-
     width: 60%;
-
 }
 
 .topnav a {
-
     float: left;
-
     color: black;
-
     text-align: center;
-
     padding: 20px;
     margin: auto;
-
     text-decoration: none;
-
     font-size: 18px;
-
 }
 
 .topnav i{
@@ -49,89 +35,7 @@ body {
 }
 
 .topnav a:hover {
-
     color: #72dae7;
-
-}
-
-.quoteArea {
-    display: flex;
-    flex-flow: column wrap;
-    margin-top: 80px;
-}
-
-.quoteArea h4 {
-    text-align: center;
-    color: black;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 25px;
-}
-
-.quote {
-    animation: blinkingText 5.1s infinite;
-}
-
-@keyframes blinkingText {
-    0% {
-        color: black;
-    }
-
-    49% {
-        color: transparent;
-    }
-
-    50% {
-        color: transparent;
-    }
-
-    99% {
-        color: transparent;
-    }
-
-    100% {
-        color: transparent;
-    }
-}
-
-.articles-container {
-    display: flex;
-    flex-flow: column wrap;
-    align-items: center;
-    justify-content: center;
-    padding: 2px;
-    background-color: #87D68D;
-    width: 100%;
-    margin-top: 50px;
-    border: 1px solid transparent;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}
-
-.article {
-    clear: both;
-    display: flex;
-    align-self: flex-start;
-    border: 1px solid transparent;
-    border-radius: 10px;
-    background-color: #F7FFF6;
-    margin: 20px;
-}
-
-.article img {
-    float: left;
-    width: 200px;
-    border-radius: 20px;
-    margin: 10px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}
-
-.article h4 {
-    text-align: center;
-}
-
-.article p {
-    text-align: justify;
-    padding: 20px;
 }
 
 .footer {
@@ -149,96 +53,4 @@ a {
 
 a:hover {
     color: #72dae7;
-}
-
-/*About Us Page*/
-.aboutUsBody{
-    background-color: #76a56a;
-}
-
-.aboutUs-container {
-    display: flex;
-    flex-flow: column wrap;
-    align-items: center;
-    justify-content: center;
-    padding: 2px;
-    background-color: #87D68D;
-    width: 100%;
-    margin-top: 90px;
-    border: 1px solid transparent;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}
-
-.team-member {
-    clear: both;
-    display: flex;
-    align-self: flex-start;
-    border: 1px solid transparent;
-    border-radius: 10px;
-    background-color: #F7FFF6;
-    margin: 20px;
-}
-
-.team-member img {
-    float: left;
-    width: 250px;
-    border-radius: 20px;
-    margin: 10px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}
-
-.team-member h4 {
-    text-align: center;
-}
-
-.team-member p {
-    text-align: justify;
-    padding: 20px;
-}
-
-.social-media-container{
-    display: flex;
-    justify-content: center;
-}
-
-.social-medias{
-    display: flex;
-}
-
-.social-medias ul {
-    overflow: hidden;
-    margin: 0;
-    padding: 0;
-}
-
-.social-medias li {
-    list-style-type: none;
-    float: left;
-    padding-right: 100px;
-    padding-bottom: 20px;
-}
-
-.social-medias a {
-    display: block;
-}
-
-.social-medias i {
-    color: black;
-    font-size: 36px;
-}
-
-.social-medias i:hover{
-    color: #72dae7;
-}
-
-.description
-{ 
-    text-align: center;
-    
-   background-color: transparent;
-    margin-left: 380px;
-    margin-right: 380px;
-    font-size: 25px;
-    font-family: cursive;
 }
