Edited styling for articles page, edited parameters in GNews api link, removed obsolete code in homepage

--- a/articles.css
+++ b/articles.css
@@ -7,7 +7,7 @@
     padding: 2px;
     background-color: #87D68D;
     width: 100%;
-    margin-top: 50px;
+    margin-top: 5%;
     border: 1px solid transparent;
     border-radius: 10px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -16,7 +16,8 @@
 .article {
     clear: both;
     display: flex;
-    align-self: flex-start;
+    justify-content: center;
+    width: 90%;
     border: 1px solid transparent;
     border-radius: 10px;
     background-color: #F7FFF6;
@@ -25,7 +26,8 @@
 
 .article img {
     float: left;
-    width: 200px;
+    max-width: 300px;
+    max-height: 150px;
     border-radius: 20px;
     margin: 10px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
