Began testing with geolocation API, pages have been made somewhat more responsive, and more tests with MapBox Maps have been done
Co-authored-by: RichardbrobbeyASC20 <richardbrobbey2003@yahoo.com>
Co-authored-by: ElijahASC <elijahcherisma03@gmail.com>

--- a/aboutUs.css
+++ b/aboutUs.css
@@ -82,3 +82,18 @@
 {
 
 }
+@media(max-width: 500px)
+{
+    .topnav
+    {
+        width: 80%;
+    }
+    .team-member
+    {
+        width: 90%;
+    }
+    .bio
+    {
+        width: 8%;
+    }
+}
