--- a/news.css
+++ b/news.css
@@ -41,3 +41,11 @@
     text-align: justify;
     padding: 20px;
 }
+@media(max-width: 500px)
+{
+    
+    .topnav
+    {
+        width: 92%;
+    }
+}
