--- a/recyclingCenters.css
+++ b/recyclingCenters.css
@@ -2,14 +2,48 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 15%;
+    margin-top: 8%;
     flex-flow: column wrap;
 }
-@media(max-width: 500px)
-{
-    
-    .topnav
-    {
-        width: 92%;
+
+button{
+    margin-top: 30px;
+    border-radius: 20px;
+    padding: 20px;
+    border: 0px;
+}
+
+button i{
+    background-color: rgb(86, 160, 216);
+    padding: 20px;
+    border-radius: 100%;
+    font-size: 16px;
+}
+
+button span{
+    padding: 10px;
+    font-size: 16px;
+}
+
+button:focus{
+    outline: none;
+}
+
+#map{
+    width: 80%;
+    height: 500px;
+    border-radius: 20px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+
+
+@media(max-width: 1000px){
+    .mapContainer{
+        margin-top: 30%;
+    }
+
+    #map{
+        width: 90%;
     }
 }
