Edited navbar positioning

--- a/recycle.css
+++ b/recycle.css
@@ -31,6 +31,7 @@ body::-webkit-scrollbar-button {
 .nav-container{
     display: flex;
     justify-content: center;
+    margin-bottom: 70px;
 }
 
 .topnav {
