--- a/recyclingCenters.css
+++ b/recyclingCenters.css
@@ -10,6 +10,7 @@ button{
     border-radius: 20px;
     padding: 20px;
     border: 0px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 button i{
