Added fonts across all pages, added some animations, and further improved navbar. Began working on How To Recycle Page, will begin to further implement firebase. Also added our favicon for use to shwo recycling center locations in the map
Co-authored-by: ElijahASC <elijahcherisma03@gmail.com>
Co-authored-by: RichardbrobbeyASC20 <richardbrobbey2003@yahoo.com>

--- a/index.css
+++ b/index.css
@@ -51,7 +51,7 @@
     text-align: center;
     background-color: transparent;
     font-size: 25px;
-    font-family: cursive;
+    font-family: 'Baloo Tamma 2', cursive;
 }
 
 .articles-container {
