Added some transitions, and minor edits across some files

--- a/recyclingCenters.css
+++ b/recyclingCenters.css
@@ -5,7 +5,7 @@
     flex-flow: column wrap;
 }
 
-.mapContainer button{
+#queryLocation{
     margin-top: 30px;
     border-radius: 20px;
     padding: 20px;
@@ -13,19 +13,19 @@
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
-.mapContainer button i{
+#queryLocation i{
     background-color: rgb(86, 160, 216);
     padding: 20px;
     border-radius: 100%;
     font-size: 16px;
 }
 
-.mapContainer button span{
+#queryLocation span{
     padding: 10px;
     font-size: 16px;
 }
 
-.mapContainer button:focus{
+#queryLocation:focus{
     outline: none;
 }
 
@@ -36,7 +36,9 @@
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
-
+p{
+    font-family: 'Roboto', sans-serif;
+}
 
 @media(max-width: 1000px){
     .mapContainer{
