--- a/recycle.css
+++ b/recycle.css
@@ -104,10 +104,6 @@ a{
     font-size: 24px;
 }
 
-.topnav a:hover {
-    color: #72dae7;
-}
-
 .footer {
     display: flex;
     justify-content: center;
@@ -124,12 +120,13 @@ a{
     font-family: 'Red Rose', cursive;
 }
 
-a {
+a, i {
     color: black;
     text-decoration: none;
+    transition: all 300ms ease-out
 }
 
-a:hover {
+a:hover, i:hover {
     color: #72dae7;
 }
 
@@ -141,7 +138,16 @@ a:hover {
     color: black;
 }
 
+.zahvier{
+    display: none;
+}
+
 @media(max-width: 500px) {
+
+    a:hover, i:hover {
+        color: #72dae7;
+    }
+
     .description {
         background-color: transparent;
         margin-left: 40px;
