--- a/lib/css/news.css
+++ b/lib/css/news.css
@@ -1,5 +1,5 @@
 /*Articles*/
-.articles-container {
+.articles-container{
     display: flex;
     flex-flow: column wrap;
     align-items: center;
@@ -10,6 +10,7 @@
     border: 1px solid transparent;
     border-radius: 10px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    margin-bottom: 50px;
 }
 
 .article {
